--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -1,4 +1,11 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Location_DetailsModel
 @{
+    ViewData["Title"] = "Is there anything else people need to know about this location?";
 }
+
+@section Back {
+    <a href="todo" class="govuk-back-link">Back</a>
+}
+
+<partial name="_SingleTextAreaPage" model="Model"/>
