--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Information.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Information.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Location_DetailsModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Location_InformationModel
 @{
     ViewData["Title"] = "Is there anything else people need to know about this location?";
 }
