--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Information.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Information.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Back {
-    <a href="todo" class="govuk-back-link">Back</a>
+    <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
 
 <partial name="_SingleTextAreaPage" model="Model"/>
