add beginning of new location journey

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_AddLocationCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_AddLocationCard.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="card">
     <h3 class="govuk-heading-s">
-        <a>Add a location</a>
+        <a href="/manage-locations/start-add-location">Add a location</a>
     </h3>
     <p class="govuk-body-s">Add a location to the directory.</p>
 </div>
