--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Family-Hub.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Family-Hub.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Location_AddressModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Family_HubModel
 @{
     ViewData["Title"] = "Is this location a family hub?";
 }
