--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Family-Hub.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Family-Hub.cshtml
@@ -1,25 +1,11 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.Family_HubModel
 @{
-    ViewData["Title"] = "Is this location a family hub?";
+    ViewData["Title"] = Model.Legend;
 }
 
 @section Back {
     <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
 
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <form method="post" novalidate>
-            <h1 class="govuk-heading-l">
-                Is this location a family hub?
-            </h1>
-
-            <p>Placeholder page</p>
-
-            <button type="submit" class="govuk-button" data-module="govuk-button">
-                Continue
-            </button>
-        </form>
-    </div>
-</div>
+<partial name="_RadiosPage" model="Model" />
