The most significant change is in the `DeleteUser.cshtml` file where the values for the radio buttons have been updated to be enclosed in quotes, enhancing the readability and consistency of the code. The other changes are non-functional and involve the addition of comments in `TypeOfRole.cshtml` and `DeleteOrganisation.cshtml` files, indicating future tasks to use a new radio component.
List of changes:

1. `DeleteUser.cshtml`: The values for the radio buttons have been updated to be enclosed in quotes. This improves the readability and consistency of the code.
2. `TypeOfRole.cshtml`: A comment has been added indicating a future task to use a new radio component. This is a non-functional change.
3. `DeleteOrganisation.cshtml`: A similar comment has been added indicating a future task to use a new radio component. This is also a non-functional change.

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/DeleteUser.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/DeleteUser.cshtml
@@ -6,16 +6,18 @@
     ViewData["Title"] = Model.PageHeading;
 }
 
+@* todo: use new radio component *@
+
 <div class="govuk-form-group">
     <div class="govuk-radios" data-module="govuk-radios">
         <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="remove-user" type="radio" asp-for="DeleteUser" value=true>
+            <input class="govuk-radios__input" id="remove-user" type="radio" asp-for="DeleteUser" value="true">
             <label class="govuk-label govuk-radios__label" for="remove-user">
                 Yes, delete the permissions
             </label>
         </div>
         <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="remove-user-2" type="radio" asp-for="DeleteUser" value=false>
+            <input class="govuk-radios__input" id="remove-user-2" type="radio" asp-for="DeleteUser" value="false">
             <label class="govuk-label govuk-radios__label" for="remove-user-2">
                 No, keep the permissions
             </label>
