--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/VcsAdmin/Pages/DeleteOrganisation.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "Deleting an organisation";
 }
 
+@* todo: use new radio component *@
+
 @section Back {
     <a href="@Model.BackButtonPath" class="govuk-back-link">Back</a>
 }
