--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfRole.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/TypeOfRole.cshtml
@@ -5,6 +5,8 @@
     Model.ErrorElementId = "role-for-organisation-type-La";
 }
 
+@* todo: use new radio component *@
+
 <div class="govuk-radios" data-module="govuk-radios">
     <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="role-for-organisation-type-La" data-testid="role-for-organisation-type-la" asp-for="OrganisationType" type="radio" value="LA">
