--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -8,18 +8,27 @@
     <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
 
+@* todo: *@
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Check the details and add location</h1>
 
         <summary-list>
-            @* todo: url helper *@
             <summary-list-row key="Address" show-empty action1="Change"
-                              action1-href="/manage-locations/location-address?locationId=@(Model.LocationId)&flow=edit">@* @Model.Address *@</summary-list-row>
+                              action1-href="@Model.GetRedoPageUrl(LocationJourneyPage.Location_Address)">
+                @* @Model.Address *@
+            </summary-list-row>
+
             <summary-list-row key="Family hub" show-empty action1="Change"
-                              action1-href="/manage-locations/family-hub?locationId=@(Model.LocationId)&flow=edit">@(Model.LocationModel!.IsFamilyHub!.Value ? "Yes" : "No")</summary-list-row>
+                              action1-href="@Model.GetRedoPageUrl(LocationJourneyPage.Family_Hub)">
+                @(Model.LocationModel!.IsFamilyHub!.Value ? "Yes" : "No")
+            </summary-list-row>
+
             <summary-list-row key="More details" show-empty action1="Change"
-                              action1-href="/manage-locations/location-details?locationId=@(Model.LocationId)&flow=edit">@Model.LocationModel!.Description</summary-list-row>
+                              action1-href="@Model.GetRedoPageUrl(LocationJourneyPage.Location_Details)">
+                @Model.LocationModel!.Description
+            </summary-list-row>
         </summary-list>
     </div>
 </div>
