--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -26,7 +26,7 @@
             </summary-list-row>
 
             <summary-list-row key="More details" show-empty action1="Change"
-                              action1-href="@Model.GetRedoPageUrl(LocationJourneyPage.Location_Details)">
+                              action1-href="@Model.GetRedoPageUrl(LocationJourneyPage.Location_Information)">
                 @Model.LocationModel!.Description
             </summary-list-row>
         </summary-list>
