--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -30,5 +30,7 @@
                 @Model.LocationModel!.Description
             </summary-list-row>
         </summary-list>
+        
+        <button class="govuk-button" data-module="govuk-button">Confirm and add location</button>
     </div>
 </div>
