--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Address.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Address.cshtml
@@ -36,8 +36,8 @@
             <p>If people can go to different address, give the main one. You can add others later. </p>           
 
             <div class="govuk-form-group ">
-                <label class="govuk-label" for="buildingName">Building Name  (optional)</label>
-                <input class="govuk-input" id="buildingName" asp-for="UserInput.BuildingName" type="text" title="Building Name  (optional)" maxlength="255">
+                <label class="govuk-label" for="buildingName">Building name (optional)</label>
+                <input class="govuk-input" id="buildingName" asp-for="UserInput.BuildingName" type="text" title="Building name (optional)" maxlength="255">
             </div>
 
             <div class="govuk-form-group @(firstLineMissingError?.FormGroupClass)">
