back button on location details page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -18,7 +18,7 @@
 }
 
 @section Back {
-    <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
+    <a class="govuk-back-link fh-back-link">Back</a>
 }
 
 <div class="govuk-grid-row">
