--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/LocationAddedConfirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/LocationAddedConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_locations.LocationAddedConfirmationModel
+@model LocationConfirmationModel
 @{
     ViewData["Title"] = "Location added";
 }
